testcases/pos/batch/fun_typed.bard
let fun good_number(x: Int): Bool =
        x == 42
in
    good_number(20)
end
