testcases/neg/type/fun_wrong_return.bard
let fun f(x: Int): Int = true
in
    42
end
